{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 574,
  "lineage": "3ea88457-46a4-d080-df4b-699ec4221235",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b823aa03ebf22c93",
            "arn": "arn:aws:ec2:ap-south-1:654654617590:instance/i-08fa889725bf9c5a7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "niura-staging-bastion-profile",
            "id": "i-08fa889725bf9c5a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb473123eafcadcb",
            "private_dns": "ip-10-0-1-76.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.76",
            "public_dns": "ec2-3-109-181-51.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.181.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b97ea74e471bdbb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f00434c33a73657d",
            "tags": {
              "Name": "niura-staging-bastion"
            },
            "tags_all": {
              "Name": "niura-staging-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04c5e611e97912a56"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_security_group.bastion_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:security-group/sg-04c5e611e97912a56",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c5e611e97912a56",
            "ingress": [],
            "name": "niura-staging-bastion-sg",
            "name_prefix": "",
            "owner_id": "654654617590",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:loadbalancer/app/niura-staging-alb/aa1fe40b0a998a86",
            "arn_suffix": "app/niura-staging-alb/aa1fe40b0a998a86",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "niura-staging-alb-1424214904.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:loadbalancer/app/niura-staging-alb/aa1fe40b0a998a86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "niura-staging-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f33d7dcaaf41c381"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06b1803f13fbcf912"
              },
              {
                "subnet_id": "subnet-0f00434c33a73657d"
              }
            ],
            "subnets": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Name": "niura-staging-alb",
              "Project": "niura"
            },
            "tags_all": {
              "Name": "niura-staging-alb",
              "Project": "niura"
            },
            "vpc_id": "vpc-0898d281454e7c377",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:listener/app/niura-staging-alb/aa1fe40b0a998a86/5534796c28ea74b6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "No service matched",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:listener/app/niura-staging-alb/aa1fe40b0a998a86/5534796c28ea74b6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:loadbalancer/app/niura-staging-alb/aa1fe40b0a998a86",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_lb.alb",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gateway_only",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-gateway-tg/68b77916796244f3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:listener-rule/app/niura-staging-alb/aa1fe40b0a998a86/5534796c28ea74b6/a794d7ea5ac72167",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:listener-rule/app/niura-staging-alb/aa1fe40b0a998a86/5534796c28ea74b6/a794d7ea5ac72167",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:listener/app/niura-staging-alb/aa1fe40b0a998a86/5534796c28ea74b6",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_target_group.tg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "core-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-core-service-tg/f66c077f73aac648",
            "arn_suffix": "targetgroup/niura-staging-core-service-tg/f66c077f73aac648",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-core-service-tg/f66c077f73aac648",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "niura-staging-core-service-tg",
            "port": 8001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eeg-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-eeg-service-tg/879e225826b55a3d",
            "arn_suffix": "targetgroup/niura-staging-eeg-service-tg/879e225826b55a3d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-eeg-service-tg/879e225826b55a3d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "niura-staging-eeg-service-tg",
            "port": 8002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "gateway",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-gateway-tg/68b77916796244f3",
            "arn_suffix": "targetgroup/niura-staging-gateway-tg/68b77916796244f3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-gateway-tg/68b77916796244f3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:654654617590:loadbalancer/app/niura-staging-alb/aa1fe40b0a998a86"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "niura-staging-gateway-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "ocr-service",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-ocr-service-tg/022426f07e127227",
            "arn_suffix": "targetgroup/niura-staging-ocr-service-tg/022426f07e127227",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:654654617590:targetgroup/niura-staging-ocr-service-tg/022426f07e127227",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "niura-staging-ocr-service-tg",
            "port": 8003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:security-group/sg-0f33d7dcaaf41c381",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f33d7dcaaf41c381",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "niura-staging-alb-sg",
            "name_prefix": "",
            "owner_id": "654654617590",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:security-group/sg-0574ef6913dacc18c",
            "description": "Security group for ECS tasks (allows DB access from tasks)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0574ef6913dacc18c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS tasks on port 8000",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d7dcaaf41c381"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS tasks on port 8001",
                "from_port": 8001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d7dcaaf41c381"
                ],
                "self": false,
                "to_port": 8001
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS tasks on port 8002",
                "from_port": 8002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d7dcaaf41c381"
                ],
                "self": false,
                "to_port": 8002
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to reach ECS tasks on port 8003",
                "from_port": 8003,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f33d7dcaaf41c381"
                ],
                "self": false,
                "to_port": 8003
              },
              {
                "cidr_blocks": [],
                "description": "Allow ECS services in same SG to communicate on ports 8000-8003",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8003
              },
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to reach VPC endpoints via HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow PostgreSQL access between tasks/RDS in same SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow bastion EC2 (SSM) to reach RDS PostgreSQL",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c5e611e97912a56"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "niura-staging-ecs-sg",
            "name_prefix": "",
            "owner_id": "654654617590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "niura-staging-ecs-sg"
            },
            "tags_all": {
              "Name": "niura-staging-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "core-service",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach ECS tasks on port 8001",
            "from_port": 8001,
            "id": "sgrule-3821536887",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-01c53db5a504673cc",
            "self": false,
            "source_security_group_id": "sg-0f33d7dcaaf41c381",
            "timeouts": null,
            "to_port": 8001,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eeg-service",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach ECS tasks on port 8002",
            "from_port": 8002,
            "id": "sgrule-1684130347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-06839375155bf2852",
            "self": false,
            "source_security_group_id": "sg-0f33d7dcaaf41c381",
            "timeouts": null,
            "to_port": 8002,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "gateway",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach ECS tasks on port 8000",
            "from_port": 8000,
            "id": "sgrule-2662285891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-0dc2ee10dfc7f5568",
            "self": false,
            "source_security_group_id": "sg-0f33d7dcaaf41c381",
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "ocr-service",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to reach ECS tasks on port 8003",
            "from_port": 8003,
            "id": "sgrule-419859999",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-07244ec40e3311ea4",
            "self": false,
            "source_security_group_id": "sg-0f33d7dcaaf41c381",
            "timeouts": null,
            "to_port": 8003,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Allow bastion EC2 (SSM) to reach RDS PostgreSQL",
            "from_port": 5432,
            "id": "sgrule-3665158688",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-02a912f5e7e9e3341",
            "self": false,
            "source_security_group_id": "sg-04c5e611e97912a56",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_self_internal_comms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS services in same SG to communicate on ports 8000-8003",
            "from_port": 8000,
            "id": "sgrule-3786332444",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-05d9f9cea204a9c7b",
            "self": false,
            "source_security_group_id": "sg-0574ef6913dacc18c",
            "timeouts": null,
            "to_port": 8003,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_sg_self_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL access between tasks/RDS in same SG",
            "from_port": 5432,
            "id": "sgrule-1072420355",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-08a73e390e568eae0",
            "self": false,
            "source_security_group_id": "sg-0574ef6913dacc18c",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_vpc_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS tasks to reach VPC endpoints via HTTPS",
            "from_port": 443,
            "id": "sgrule-730118114",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0574ef6913dacc18c",
            "security_group_rule_id": "sgr-0a70d7c9bf914a4f7",
            "self": false,
            "source_security_group_id": "sg-0574ef6913dacc18c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:security-group/sg-0f4aab4f9b61e8bd3",
            "description": "Security group for MSK Serverless",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4aab4f9b61e8bd3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to connect to Kafka (TLS)",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0574ef6913dacc18c"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "Allow bastion host to connect to Kafka for admin tasks",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c5e611e97912a56"
                ],
                "self": false,
                "to_port": 9098
              }
            ],
            "name": "niura-staging-kafka-sg",
            "name_prefix": "",
            "owner_id": "654654617590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "niura-staging-kafka-sg"
            },
            "tags_all": {
              "Name": "niura-staging-kafka-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow bastion host to connect to Kafka for admin tasks",
            "from_port": 9098,
            "id": "sgrule-2690250071",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f4aab4f9b61e8bd3",
            "security_group_rule_id": "sgr-03a1a4eec9fed2bd5",
            "self": false,
            "source_security_group_id": "sg-04c5e611e97912a56",
            "timeouts": null,
            "to_port": 9098,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.bastion.aws_security_group.bastion_sg",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_to_kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS tasks to connect to Kafka (TLS)",
            "from_port": 9098,
            "id": "sgrule-1170719092",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f4aab4f9b61e8bd3",
            "security_group_rule_id": "sgr-0896e7084315cb2a4",
            "self": false,
            "source_security_group_id": "sg-0574ef6913dacc18c",
            "timeouts": null,
            "to_port": 9098,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:internet-gateway/igw-0ba89cf3357a85555",
            "id": "igw-0ba89cf3357a85555",
            "owner_id": "654654617590",
            "tags": {
              "Name": "niura-staging-igw"
            },
            "tags_all": {
              "Name": "niura-staging-igw"
            },
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:route-table/rtb-0afc78ca3e068f1ae",
            "id": "rtb-0afc78ca3e068f1ae",
            "owner_id": "654654617590",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba89cf3357a85555",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "niura-staging-public-rt"
            },
            "tags_all": {
              "Name": "niura-staging-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020c33bb1174d7582",
            "route_table_id": "rtb-0afc78ca3e068f1ae",
            "subnet_id": "subnet-0f00434c33a73657d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:subnet/subnet-0f00434c33a73657d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f00434c33a73657d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "niura-staging-subnet-public"
            },
            "tags_all": {
              "Name": "niura-staging-subnet-public"
            },
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:subnet/subnet-06b1803f13fbcf912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b1803f13fbcf912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654617590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "niura-staging-subnet-public-b"
            },
            "tags_all": {
              "Name": "niura-staging-subnet-public-b"
            },
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc/vpc-0898d281454e7c377",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f2fad5e69f822635",
            "default_route_table_id": "rtb-0acb766bf351a25cf",
            "default_security_group_id": "sg-09190e22939d051a7",
            "dhcp_options_id": "dopt-075f8fd8ae70e1c05",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0898d281454e7c377",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0acb766bf351a25cf",
            "owner_id": "654654617590",
            "tags": {
              "Name": "niura-staging-vpc"
            },
            "tags_all": {
              "Name": "niura-staging-vpc"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:security-group/sg-02faa4716b36c040b",
            "description": "Security group for Redis ElastiCache",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02faa4716b36c040b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis port from ECS services",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0574ef6913dacc18c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "niura-staging-redis-sg",
            "name_prefix": "",
            "owner_id": "654654617590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-redis-sg",
              "Project": "niura"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-redis-sg",
              "Project": "niura"
            },
            "timeouts": null,
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-047dd093d038ebc90",
            "dns_entry": [
              {
                "dns_name": "vpce-047dd093d038ebc90-7e2bs8ig.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-047dd093d038ebc90-7e2bs8ig-ap-south-1a.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-047dd093d038ebc90-7e2bs8ig-ap-south-1b.ec2messages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ec2messages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z000080264NL6I60WI4T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-047dd093d038ebc90",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-058fcb37e5afcc70f",
              "eni-08e0deb202bbefee5"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ec2messages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.100",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.186",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-ec2messages-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-085e107f95d9828bc",
            "dns_entry": [
              {
                "dns_name": "vpce-085e107f95d9828bc-xur2tlq9.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-085e107f95d9828bc-xur2tlq9-ap-south-1a.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-085e107f95d9828bc-xur2tlq9-ap-south-1b.api.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "api.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06889151TLR34EM323NP"
              },
              {
                "dns_name": "ecr.ap-south-1.api.aws",
                "hosted_zone_id": "Z04949681G8XOCKLOA1XN"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-085e107f95d9828bc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0012100a02ad34a17",
              "eni-03cd3dc92d712ec55"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.api",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.136",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.228",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0b7654995d125f55e",
            "dns_entry": [
              {
                "dns_name": "vpce-0b7654995d125f55e-9z410ccr.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b7654995d125f55e-9z410ccr-ap-south-1b.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b7654995d125f55e-9z410ccr-ap-south-1a.dkr.ecr.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06951822WS8KEUFBUBFQ"
              },
              {
                "dns_name": "*.dkr.ecr.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06951822WS8KEUFBUBFQ"
              },
              {
                "dns_name": "dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z06888291RZ70B9MGPV9I"
              },
              {
                "dns_name": "*.dkr-ecr.ap-south-1.on.aws",
                "hosted_zone_id": "Z06888291RZ70B9MGPV9I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b7654995d125f55e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01d9a9521ced4c4a8",
              "eni-048e5eb37742906bf"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ecr.dkr",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.241",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.188",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0738a183dfdf0b6aa",
            "dns_entry": [
              {
                "dns_name": "vpce-0738a183dfdf0b6aa-ol8l1hz3.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0738a183dfdf0b6aa-ol8l1hz3-ap-south-1b.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0738a183dfdf0b6aa-ol8l1hz3-ap-south-1a.logs.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06900351PYVMFYB6S8BA"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z0579605351YBB8VVUIJQ"
              },
              {
                "dns_name": "streaming-logs.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z06884471A0ADEKKGD75Q"
              },
              {
                "dns_name": "logs.ap-south-1.api.aws",
                "hosted_zone_id": "Z05742353P3OF6YXPJM7O"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0738a183dfdf0b6aa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0594c7f5010d928b5",
              "eni-074c728aa182caf87"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.logs",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.132",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.251",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-logs-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-logs-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0a8572b9fe3d517ce",
            "cidr_blocks": [
              "52.219.156.0/22",
              "52.219.160.0/23",
              "52.219.62.0/23",
              "3.5.212.0/23",
              "3.5.208.0/22",
              "16.12.40.0/23",
              "52.219.64.0/22",
              "16.12.36.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a8572b9fe3d517ce",
            "ip_address_type": "ipv4",
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0acb766bf351a25cf",
              "rtb-0afc78ca3e068f1ae"
            ],
            "service_name": "com.amazonaws.ap-south-1.s3",
            "service_region": "ap-south-1",
            "state": "available",
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-s3-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "module.vpc_endpoints.data.aws_route_tables.vpc_route_tables",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0a3628feec79962b0",
            "dns_entry": [
              {
                "dns_name": "vpce-0a3628feec79962b0-jwpwkm9t.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0a3628feec79962b0-jwpwkm9t-ap-south-1a.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0a3628feec79962b0-jwpwkm9t-ap-south-1b.ssm.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssm.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z08978032KMCU8YU9N81F"
              },
              {
                "dns_name": "ssm.ap-south-1.api.aws",
                "hosted_zone_id": "Z0003143C87TGJIBVCWL"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a3628feec79962b0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0285d06078b426c6a",
              "eni-0f91c2d119723e555"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssm",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.93",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.240",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-ssm-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0c55706f51e78d50a",
            "dns_entry": [
              {
                "dns_name": "vpce-0c55706f51e78d50a-r9sslmqw.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c55706f51e78d50a-r9sslmqw-ap-south-1b.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0c55706f51e78d50a-r9sslmqw-ap-south-1a.ssmmessages.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "ssmmessages.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z00022553UFG70OF7IZN2"
              },
              {
                "dns_name": "ssmmessages.ap-south-1.api.aws",
                "hosted_zone_id": "Z08647763DHM333PHU3Z0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c55706f51e78d50a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07113c548b673f40f",
              "eni-0ff496b61dc8fb575"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.ssmmessages",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.237",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.103",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-ssmmessages-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:654654617590:vpc-endpoint/vpce-0b415b6622dbe0575",
            "dns_entry": [
              {
                "dns_name": "vpce-0b415b6622dbe0575-667dbsbw.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b415b6622dbe0575-667dbsbw-ap-south-1a.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "vpce-0b415b6622dbe0575-667dbsbw-ap-south-1b.sts.ap-south-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z2KVTB3ZLFM7JR"
              },
              {
                "dns_name": "sts.ap-south-1.amazonaws.com",
                "hosted_zone_id": "Z01486242GMJ30PDA6NX5"
              },
              {
                "dns_name": "sts.ap-south-1.api.aws",
                "hosted_zone_id": "Z06887861GQXXBBGRYS4Y"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b415b6622dbe0575",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03afa70644bf19e8c",
              "eni-067b5298c3ae75621"
            ],
            "owner_id": "654654617590",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0574ef6913dacc18c"
            ],
            "service_name": "com.amazonaws.ap-south-1.sts",
            "service_region": "ap-south-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.4",
                "subnet_id": "subnet-0f00434c33a73657d"
              },
              {
                "ipv4": "10.0.2.244",
                "subnet_id": "subnet-06b1803f13fbcf912"
              }
            ],
            "subnet_ids": [
              "subnet-06b1803f13fbcf912",
              "subnet-0f00434c33a73657d"
            ],
            "tags": {
              "Environment": "staging",
              "Name": "niura-staging-sts-endpoint"
            },
            "tags_all": {
              "Environment": "staging",
              "Name": "niura-staging-sts-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0898d281454e7c377"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_caller_identity.current",
            "data.aws_region.current",
            "module.bastion.aws_iam_instance_profile.bastion_profile",
            "module.bastion.aws_iam_role.bastion_role",
            "module.bastion.aws_iam_role_policy.bastion_msk_policy",
            "module.bastion.aws_iam_role_policy_attachment.ssm_core",
            "module.bastion.aws_instance.bastion",
            "module.bastion.aws_security_group.bastion_sg",
            "module.ecs.aws_cloudwatch_log_group.ecs",
            "module.ecs.aws_ecs_cluster.this",
            "module.ecs.aws_ecs_service.service",
            "module.ecs.aws_ecs_task_definition.task",
            "module.ecs.aws_iam_role.ecs_task_role",
            "module.ecs.aws_iam_role.task_execution_role",
            "module.ecs.aws_iam_role_policy.ecs_exec_policy",
            "module.ecs.aws_iam_role_policy.ecs_task_msk_policy",
            "module.ecs.aws_iam_role_policy.task_exec_ssm_policy",
            "module.ecs.aws_iam_role_policy_attachment.task_exec_ecr",
            "module.ecs.aws_lb.alb",
            "module.ecs.aws_lb_listener.http",
            "module.ecs.aws_lb_listener_rule.gateway_only",
            "module.ecs.aws_lb_target_group.tg",
            "module.ecs.aws_security_group.alb_sg",
            "module.ecs.aws_security_group.ecs_sg",
            "module.ecs.aws_security_group_rule.alb_attach_extra",
            "module.ecs.aws_security_group_rule.alb_to_ecs_http",
            "module.ecs.aws_security_group_rule.bastion_to_rds",
            "module.ecs.aws_security_group_rule.ecs_self_internal_comms",
            "module.ecs.aws_security_group_rule.ecs_sg_self_ingress",
            "module.ecs.aws_security_group_rule.ecs_to_vpc_endpoints",
            "module.ecs.aws_service_discovery_private_dns_namespace.ns",
            "module.ecs.aws_service_discovery_service.sd",
            "module.ecs.data.aws_caller_identity.current",
            "module.ecs.data.aws_region.current",
            "module.kafka.aws_msk_serverless_cluster.this",
            "module.kafka.aws_security_group.kafka_sg",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.network.aws_route_table_association.public_assoc",
            "module.network.aws_subnet.public",
            "module.network.aws_subnet.public_b",
            "module.network.aws_vpc.main",
            "module.rds_core.aws_db_instance.this",
            "module.rds_core.aws_db_subnet_group.this",
            "module.rds_gateway.aws_db_instance.this",
            "module.rds_gateway.aws_db_subnet_group.this",
            "random_password.rds_master_password"
          ]
        }
      ]
    }
  ]
}